fixed header overlapping

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,6 +9,7 @@
    display: flex;
    align-items: center;
    justify-content: center;
+   z-index: 5;
 }
 
 .header-content-wrapper {
